fix whitespace on goal descriptions

--- a/app/assets/stylesheets/coughdrop.css.scss
+++ b/app/assets/stylesheets/coughdrop.css.scss
@@ -94,6 +94,7 @@ h1 a:focus {
 .safe_html {
   width: 100%;
   overflow: hidden;
+  white-space: pre-line;
   img {
     max-width: 400px;
   }
